<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText android:id="@+id/phoneNumber"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:imeActionLabel="@string/launch" />

    <EditText android:id="@+id/apiKey"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/api_key"
        android:inputType="number"
        android:imeActionLabel="@string/launch" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:onClick="displayMain"
        style="@style/Widget.AppCompat.Button"
        android:elevation="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="save"
        style="@style/Widget.AppCompat.Button"
        android:elevation="0dp" />

</LinearLayout>
