<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    android:weightSum="1"><![CDATA[
       

    ]]>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="1"><![CDATA[
       

    ]]>
    <EditText android:id="@+id/edit_message"
            android:layout_width="158dp"
            android:layout_height="136dp"
            android:hint="@string/edit_message"></EditText>

        <ImageButton
            android:layout_width="319dp"
            android:layout_height="match_parent"
            android:text="@string/button_options"
            android:onClick="displaySettings"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_icon"
            style="@style/Widget.AppCompat.Button" />
    </LinearLayout>

    <ImageButton
              android:layout_width="match_parent"
        android:text="@string/button_send"
              android:onClick="sendMessage"
        style="@style/Widget.AppCompat.Button"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/button_logo"
        android:layout_height="wrap_content"
        android:layout_weight="0.58" />


    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_weight="0.43"
        android:text="@string/sent"/>

</LinearLayout>
